Left sidebar scrollbar config fixed

--- a/css/stlye.css
+++ b/css/stlye.css
@@ -19,7 +19,7 @@ html, body {
 	width: 100%;
 	height: 70px;
 	z-index: 238;
-	padding-left: 3.5rem;
+	padding-left: 1.5rem;
 	padding-right: 3.5rem;
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -137,6 +137,12 @@ html, body {
 	height: 100vh;
 	width: 25%;
 	background: #fff;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-direction: row;
 }
 
 .info-section {
@@ -164,23 +170,31 @@ html, body {
 }
 .main-icon-nav {
 	height: 80%;
-	width: 30px;
+	width: 100%;
 	/*background: red;*/
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
 	display: flex;
+	-ms-align-items: center;
+	align-items: center;
 	flex-direction: column;
 }
 .main-icon-nav img {
 	min-height: 20.6;
-	min-width: 26px;
+	min-width: 21px;
 }
 .mini-detail-nav {
 	height: 20%;
 	width: 30px;
 	/*background: green;*/
+}
+.users-icon {
+	/*width: inherit;*/
+	/*background: red;*/
+	/*height: 50px!important;*/
+	/*border-left: 2px solid black;*/
 }
 .sidebar-icons:last-child {
 margin-bottom: 0;
@@ -203,6 +217,50 @@ margin-bottom: 0;
 	display: flex;
 	-ms-align-items: flex-end;
 	align-items: flex-end;
+}
+.patience-nav {
+	height: 100%;
+	width: 100%;
+	padding-top: 6.5rem;
+}
+.patience-wrap {
+	height: 100%;
+	width: 100%;
+	padding-left: 1.7rem;
+	padding-right: 1.7rem;
+	/*background: red;*/
+	overflow-y: scroll;
+	scrollbar-color: #A9B3D2 #fff;
+  scrollbar-width: thin;
+  
+}
+​
+.patience-wrap h2 {
+	color: #434B65;
+}
+.patience-wrap p {
+	color: #9AA6CE;
+}
+.top-sect {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-ms-align-items: baseline;
+	align-items: baseline;
+	justify-content: space-between;
+}
+.patience-list {
+	height: 100%;
+	background: red;
+}
+.patience-info {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
 }
 /*main body*/
 /*//////////////////////////////////////////////////////////////////////////////////////////////*/
